added logos and some styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,7 @@ body {
   font-family: $primaryFont;
   color: $black;
   font-weight: $lightFontWeight;
-  font-size: 16px;  // $font-size 
+  font-size: 16px;
 }
 
 a {
