--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -6,7 +6,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  font-size: 16px;  //1.6rem 10px*1.6 = 16px;
+  font-size: 16px;
   padding: 22px 0px;
 }
 
@@ -39,4 +39,18 @@ header > div > .user-auth-buttons li a {
   border-radius: 20px;
   border: 2px solid $black;
   padding: 6px 16px;
+}
+
+img {
+  height: 32px;
+  margin: 0 10px;
+}
+
+.header-right {
+  display: flex;
+}
+
+.welcome-message {
+  position: relative;
+  top: 10px;
 }
