created splash page and some css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "./variables.scss";
 @import "./components/header.scss";
 @import "./components/session_form.scss";
+@import "./components/splash.scss";
 
 html {
   box-sizing: border-box;
