errors are displaying on login

--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -94,3 +94,9 @@ input[type=submit] {
   padding: 12px 22px;
   margin-bottom: 12px;
 }
+
+.error-color {
+  font-size: 14px;
+  display: inline-block;
+  color: red;
+}
