--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -98,5 +98,10 @@ input[type=submit] {
 .error-color {
   font-size: 14px;
   display: inline-block;
-  color: red;
+  color: #DB3838;
+  line-height: 20px;
+}
+
+input::placeholder {
+  color: #d7d8db;
 }
