done for the night

--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -56,7 +56,8 @@
   background-color: $grey;
 }
 
-.splash-sign-up-button > span {
+.splash-sign-up-button > a > span {
   font-size: 24px;
   font-weight: $boldFontWeight;
+  color: $black;
 }
