working on images

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import "./components/header.scss";
 @import "./components/session_form.scss";
 @import "./components/splash.scss";
+@import "./components/home.scss";
 
 html {
   box-sizing: border-box;
