--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -95,7 +95,7 @@ input[type=submit] {
   margin-bottom: 12px;
 }
 
-.error-color {
+.errors {
   font-size: 14px;
   display: inline-block;
   color: #DB3838;
