added minor asset files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
       window.userIcon = '<%= image_url('userpic.png') %>';
       window.messageIcon = '<%= image_url('messagepic.png') %>';
       window.notificationIcon = '<%= image_url('notificationpic.png') %>';
+      window.barIcon = '<%= image_url('bar.png') %>';
+      window.crownIcon = '<%= image_url('crown.png') %>';
+      window.leafIcon = '<%= image_url('leaf.png') %>';
+      window.pencilIcon = '<%= image_url('pencil.png') %>';
+      window.backgroundImage = '<%= image_url('500px-background-image.jpg') %>';
     </script>
 
   </head>
