--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,12 +19,11 @@
 @import "./components/session_form.scss";
 @import "./components/splash.scss";
 @import "./components/home.scss";
+@import "./components/404.scss";
 
 html {
   box-sizing: border-box;
   font-size: 10px;
-  // 62.5%
-  // 1 rem
 }
 
 body {
