--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -3,6 +3,9 @@
 .splash-page {
   height: 100vh;
   font-size: 20px;
+  background-image: url(https://500px.com/staticV2/media/header@2x.d3674ddb.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .splash-title {
