--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -77,6 +77,7 @@ img {
 }
 
 .header-search {
+  cursor: not-allowed;
   background-color: rgb(247, 248, 250);
   border: none;
   border-radius: 25px;
