splash page css done for now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
       window.leafIcon = '<%= image_url('leaf.png') %>';
       window.pencilIcon = '<%= image_url('pencil.png') %>';
       window.backgroundImage = '<%= image_url('500px-background-image.jpg') %>';
+      window.devicesImg = '<%= image_url('devices.png') %>';
+      window.appStoreIcon = '<%= image_url('download_app_store.png') %>';
+      window.googlePlayIcon = '<%= image_url('get_google_play.png') %>';
+
     </script>
 
   </head>
