--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -1,50 +1,50 @@
 @import "../variables.scss";
 
 .splash-page {
-  height: 100vh;
-  font-size: 20px;
+  background-color: $white;
+}
+
+.splash-cover {
   background-image: url(https://500px.com/staticV2/media/header@2x.d3674ddb.jpg);
+  background-size: cover;
+  background-blend-mode: multiply;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  position: relative;
+  grid-column: 1 / span 12;
+  height: 600px;
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+}
+
+.splash-shape-divider-bottom {
+  z-index: 1;
+  grid-column: 1 / span 2;
+  align-self: flex-end;
+  position: relative;
+  top: 5px;
+}
+
+.splash-text {
+  grid-column: 1 / span 1;
+  padding-top: 80px;
+  margin: 0 64px;
+}
+
+.splash-title, .splash-description {
+  padding-bottom: 10px;
+  color: $black;
 }
 
 .splash-title {
-  font-size: 40px;
   font-weight: $boldFontWeight;
-  max-width: 500px;
-  min-width: 400px;
-
-  // text-align: center;
-  // margin: 20px auto;
-
-  position: relative;
-  left: 15%;
-  top: 10%;
-  // top: 100px;
-}
-
-.splash-description {
-  max-width: 500px;
-  min-width: 425px;
-  color: $black;
-
-  // text-align: center;
-  // margin: 20px auto;
-
-  position: relative;
-  left: 15%;
-  top: 12%;
+  font-size: 42px;
 }
 
 .splash-sign-up-button {
   position: relative;
   left: 15%;
   top: 15%;
-
-  // margin: 0;
-  // position: absolute;
-  // left: 40%;
-
   background-color: $white;
   color: $black;
   border-radius: 25px;
@@ -63,4 +63,108 @@
   font-size: 24px;
   font-weight: $boldFontWeight;
   color: $black;
+}
+
+.splash-about-title {
+  margin: 60px 0;
+  text-align: center;
+  font-size: 36px;
+  line-height: 40px;
+  font-weight: bold;
+  text-transform: none;
+  color: rgb(34, 34, 34);
+  position: relative;
+  z-index: 2;
+}
+
+.splash-about-contents {
+  display: flex;
+  margin: 0 125px;
+  justify-content: center;
+}
+
+.splash-about-icons {
+  width: 90px;
+  height: 90px;
+}
+
+.splash-about-content {
+  margin-right: 25px;
+  width: 332px;
+  height: 296px;
+}
+
+.splash-about-content:last-child {
+  margin-right: 0px;
+}
+
+.splash-about-content-titles {
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: bold;
+  text-transform: none;
+  color: rgb(34, 34, 34);
+  margin-bottom: 20px;
+}
+
+.splash-about-content-descriptions {
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-transform: none;
+  color: rgb(34, 34, 34);
+  font-weight: 340;
+}
+
+.splash-about-content-description-one, .splash-about-content-description-four {
+  max-width: 305px;
+}
+
+.splash-about-content-description-two {
+  max-width: 312px;
+}
+
+.splash-about-content-description-three {
+  max-width: 305px;
+}
+
+.splash-about {
+  margin-bottom: 50px;
+}
+
+.splash-app {
+  display: flex;
+  justify-content: space-around;
+}
+
+.devices-image {
+  width: 350px;
+  height: 350px;
+  position: relative;
+  top: -20px;
+  left: -250px;
+}
+
+.splash-app-image {
+  width: 135px;
+  height: 45px;
+}
+
+.splash-app-title {
+  font-size: 36px;
+  line-height: 40px;
+  font-weight: bold;
+  text-transform: none;
+  color: rgb(34, 34, 34);
+  margin-bottom: 10px;
+}
+
+.splash-app-description {
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-transform: none;
+  margin-bottom: 20px;
+  color: rgb(34, 34, 34);
+  max-width: 470px;
 }
