--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -10,6 +10,13 @@ header {
   padding: 16px 0px;
 }
 
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+}
+
 header > a {
   display: flex;
   margin-left: 50px;
