--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -35,11 +35,18 @@
 .splash-title, .splash-description {
   padding-bottom: 10px;
   color: $black;
+  margin-left: 100px;
 }
 
 .splash-title {
   font-weight: $boldFontWeight;
   font-size: 42px;
+  margin-bottom: 20px;
+  max-width: 518px;
+}
+
+.splash-description {
+  max-width: 526px;
 }
 
 .splash-sign-up-button {
@@ -90,6 +97,7 @@
 }
 
 .splash-about-content {
+  margin-top: 30px;
   margin-right: 25px;
   width: 332px;
   height: 296px;
