minor css edits

--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -1,6 +1,6 @@
 @import "../variables.scss";
 
-.session_form {
+.session_form, .upload-image-form {
   height: 95%;
   width: 100%;
   display: flex;
