git push before errors can happen

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
       window.devicesImg = '<%= image_url('devices.png') %>';
       window.appStoreIcon = '<%= image_url('download_app_store.png') %>';
       window.googlePlayIcon = '<%= image_url('get_google_play.png') %>';
-
+      window.uploadIcon = '<%= image_url('upload_icon.png') %>';
+      window.infoIcon = '<%= image_url('info_icon.png') %>';
     </script>
-
   </head>
 
   <body>
