--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,9 @@
 @import "./components/splash.scss";
 @import "./components/home.scss";
 @import "./components/404.scss";
+@import "./components/images/image_index.scss";
+@import "./components/images/image_show.scss";
+@import "./components/images/image_upload_form.scss";
 
 html {
   box-sizing: border-box;
