--- a/app/assets/stylesheets/components/images/image_index.scss
+++ b/app/assets/stylesheets/components/images/image_index.scss
@@ -12,8 +12,8 @@
 
 
 .image-display {
-  height: 480px;
-  width: auto;
+  height: auto;
+  width: 400px;
   display: block;
   box-sizing: border-box;
 }
