--- a/app/assets/stylesheets/components/images/image_index.scss
+++ b/app/assets/stylesheets/components/images/image_index.scss
@@ -1,23 +1,50 @@
 @import "../../variables.scss";
 
 .images-gallery-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  margin: 0px 50px;
+  margin-top: 20px;
+  line-height: 0;
+  -webkit-column-count: 4;
+  -webkit-column-gap: 10px;
+  -moz-column-count: 4;
+  -moz-column-gap: 10px;
+  column-count: 4;
+  column-gap: 10px;
+}
+
+.images-gallery-container > .image-display-main > .image-link > .image-display {
+  width: 100% !important;
+  height: auto !important;
 }
 
 .image-display-main {
-  margin-top: 20px;
-}
-
-
-.image-display {
-  height: auto;
-  width: 400px;
-  display: block;
-  box-sizing: border-box;
+  margin-bottom: 10px;
 }
 
 .image-display:hover {
   opacity: 0.8;
+}
+
+@media (max-width: 1300px) {
+  .images-gallery-container {
+    -moz-column-count:    3;
+    -webkit-column-count: 3;
+    column-count:         3;
+  }
+}
+
+@media (max-width: 900px) {
+  .images-gallery-container {
+  -moz-column-count:    2;
+  -webkit-column-count: 2;
+  column-count:         2;
+  }
+}
+
+@media (max-width: 600px) {
+  .images-gallery-container {
+  -moz-column-count:    1;
+  -webkit-column-count: 1;
+  column-count:         1;
+  }
 }
