--- a/app/assets/stylesheets/components/images/image_update_form.scss
+++ b/app/assets/stylesheets/components/images/image_update_form.scss
@@ -244,3 +244,15 @@
   color: #DB3838;
   line-height: 20px;
 }
+
+@media (max-width: 850px) {
+  .inner-image-update-container {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .image-update-info-container {
+    margin-left: 50px;
+  }
+}
