working on css for user show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import "./components/images/image_show.scss";
 @import "./components/images/image_upload_form.scss";
 @import "./components/images/image_update_form.scss";
+@import "./components/users/user_show.scss";
 
 html {
   box-sizing: border-box;
