--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -63,6 +63,26 @@ header > div > .user-auth-buttons li a {
   padding: 10px 22px 10px 14px;
   width: 84px;
   height: 24px;
+  position: relative;
+  top: -5px;
+  svg {
+    height: 24px;
+    width: 24px;
+    position: relative;
+    left: -5px;
+  }
+  a {
+    position: relative;
+    top: -6px;
+  }
+}
+
+.upload-button:hover {
+  background-color: #d7d8db;
+  color: #222;
+  a:hover {
+    color: #222;
+  }
 }
 
 img {
