--- a/app/assets/stylesheets/components/users/user_show.scss
+++ b/app/assets/stylesheets/components/users/user_show.scss
@@ -205,6 +205,147 @@
   color: rgb(34, 34, 34);
 }
 
+.other-user-profile-location-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  .other-user-profile-location-icon {
+    // margin-right: 10px;
+    position: relative;
+    top: -2px;
+  }
+  .other-user-profile-location-city, 
+  .other-user-profile-location-state {
+    margin-left: 5px;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    text-transform: none;
+    color: rgb(34, 34, 34);
+    border-bottom: 1px dashed rgb(34, 34, 34);
+  }
+
+  .other-user-profile-location-city:hover,
+  .other-user-profile-location-state:hover {
+    cursor: pointer;
+  }
+}
+
+.other-user-profile-follow-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  .other-user-profile-follow-button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: bold;
+    margin: 0px;
+    border-width: 2px;
+    border-radius: 28px;
+    border-style: solid;
+    cursor: pointer;
+    text-align: center;
+    background-color: rgb(8, 112, 209);
+    border-color: rgb(8, 112, 209);
+    color: rgb(255, 255, 255);
+    max-height: 32px;
+    padding: 4px 14px;
+    touch-action: manipulation;
+    outline: none;
+    text-transform: none;
+    overflow: visible;
+  }
+}
+
+.other-user-about {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.other-user-profile-likes-impressions-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  .other-user-profile-followers,
+  .other-user-profile-followings,
+  .other-user-profile-likes,
+  .other-user-profile-impressions {
+    margin-right: 15px;
+    font-size: 14px;
+    line-height: 0px;
+    text-transform: none;
+    color: rgb(34, 34, 34);
+    font-family: "Helvetica Neue", HelveticaNeue, Helvetica, FreeSans, Arial sans-serif;
+    word-break: break-word;
+  }
+  .other-user-profile-impressions-info {
+    position: relative;
+    top: -8px;
+    left: -8px;
+  }
+  .other-user-profile-impressions-info:hover {
+    cursor: pointer;
+  }
+}
+
+.other-user-profile-followers-number,
+.other-user-profile-followings-number,
+.other-user-profile-likes-number,
+.other-user-profile-impressions-number {
+  margin-right: 5px;
+}
+
+.other-user-profile-followers-word,
+.other-user-profile-followings-word {
+  font-weight: bold;
+}
+
+.other-user-profile-links-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  .other-user-profile-twitter-link,
+  .other-user-profile-instagram-link,
+  .other-user-profile-facebook-link,
+  .other-user-profile-website-link {
+    margin-right: 10px;
+  }
+}
+
+.other-user-profile-nav-bar-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  padding-bottom: 5px;
+  .other-user-profile-nav-bar-link,
+  .other-user-profile-nav-bar-link-main {
+    margin-right: 16px;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    text-transform: none;
+    padding-bottom: 10px;
+  }
+  .other-user-profile-nav-bar-link {
+    color: rgb(109, 115, 120);
+  }
+  .other-user-profile-nav-bar-link-main {
+    color: rgb(8, 112, 209);
+    border-bottom: 1px solid rgb(8, 112, 209);
+  }
+  .other-user-profile-nav-bar-link:hover,
+  .other-user-profile-nav-bar-link-main:hover {
+    color: rgb(8, 112, 209);
+    border-bottom: 1px solid rgb(8, 112, 209);
+    cursor: pointer;
+  }
+}
+
 @media (max-width: 2000px) {
   .user-image-gallery-container {
     margin-left: 50px;
@@ -230,6 +371,15 @@
 @media (max-width: 1000px) {
   .user-image-gallery-container {
     grid-template-columns: repeat(2, minmax(min-content, 300px));
+  }
+}
+
+@media (max-width: 950px) {
+  .other-user-profile-picture-icon {
+    display: flex;
+    justify-content: center;
+    left: 0;
+    margin: 10px 0;
   }
 }
 
