--- a/app/assets/stylesheets/components/users/user_show.scss
+++ b/app/assets/stylesheets/components/users/user_show.scss
@@ -154,7 +154,13 @@
   .user-show-image-container {
     width: 100%;
     height: 100%;
+    filter: brightness(100%);
   }
+  
+  .user-show-image:hover {
+    filter: brightness(90%);
+  }
+
   .user-show-image {
     width: 100%;
     height: 100%;
