--- a/app/assets/stylesheets/components/images/image_show.scss
+++ b/app/assets/stylesheets/components/images/image_show.scss
@@ -1,8 +1,12 @@
 @import "../../variables.scss";
 
+.image-show-container {
+  padding-bottom: 100px;
+}
+
 .image-container {
   background-color: #222;
-  height: 937px;
+  height: 737px;
   width: auto;
   display: flex;
   justify-content: center;
@@ -28,6 +32,7 @@
 
 .image-info-container, .image-comment-container {
   background-color: #fff;
+  padding: 10px 0px 30px;
 }
 
 .image-info-container {
@@ -52,17 +57,36 @@
   margin-right: 30px;
 }
 
-.image-show-title {
-  margin: 20px 50px;
-  font-size: 24px;
-  line-height: 28px;
-  font-weight: bold;
-  text-transform: none;
-  color: rgb(34, 34,34);
+.image-show-uploader-info-container {
+  display: flex;
+  margin-left: 20px;
+  margin-top: 10px;
+  img {
+    height: 64px;
+    width: 64px;
+  }
+  .image-show-title {
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: bold;
+    text-transform: none;
+    color: rgb(34, 34, 34);
+    margin-bottom: 10px;
+  }
+  .image-show-author-info-text {
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    text-transform: none;
+    color: rgb(34, 34, 34);
+    font-family: "Helvetica Neue", HelveticaNeue, Helvetica, FreeSans, Arial, sansserif;
+    word-break: break-word;
+  }
 }
 
+.image-uploaded-date-container,
 .image-show-description {
-  margin: 20px 50px;
+  margin: 20px 35px;
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0px;
@@ -70,6 +94,24 @@
   color: rgb(34, 34, 34);
   white-space: pre-wrap;
   word-break: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: "Helvetica Neue", HelveticaNeue, Helvetica, FreeSans, Arial, sansserif;
+}
+
+.image-show-uploaded-date-info-text,
+.image-show-uploaded-date-info {
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-transform: none;
+  color: rgb(34, 34, 34);
+  font-family: "Helvetica Neue", HelveticaNeue, Helvetica, FreeSans, Arial, sansserif;
+  margin-right: 10px;
+}
+
+.image-show-uploaded-date-info-text {
+  font-weight: bold;
 }
 
 @media (max-width: 600px) {
@@ -143,6 +185,8 @@
   }
   .image-comment-container {
     width: 600px;
+    margin-top: 20px;
+    margin-left: 0px;
   }
 }
 
