css mainly done for user show

--- a/app/assets/stylesheets/components/users/user_show.scss
+++ b/app/assets/stylesheets/components/users/user_show.scss
@@ -404,7 +404,7 @@
   .user-profile-main-icons {
     display: flex;
     justify-content: center;
-    left: 20px;
+    left: 0;
     margin: 10px 0;
   }
 }
