--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@
 @import "./components/images/image_upload_form.scss";
 @import "./components/images/image_update_form.scss";
 @import "./components/users/user_show.scss";
+@import "./components//users/user_update.scss";
 
 html {
   box-sizing: border-box;
