css edits mainly

--- a/app/assets/stylesheets/components/images/image_show.scss
+++ b/app/assets/stylesheets/components/images/image_show.scss
@@ -84,6 +84,10 @@
   }
 }
 
+.image-show-author-first-name {
+  margin-right: 3px;
+}
+
 .image-uploaded-date-container,
 .image-show-description {
   margin: 20px 35px;
