--- a/app/assets/stylesheets/components/users/user_show.scss
+++ b/app/assets/stylesheets/components/users/user_show.scss
@@ -20,36 +20,82 @@
 }
 
 .user-profile-picture-image {
+  max-height: 94px;
   img {
     height: 94px;
     width: 94px;
   }
+}
+
+.circular {
+  border-radius: 50%;
+}
+
+.user-profile-picture-input-container {
+  max-width: 44px;
+  max-height: 44px;
+  min-height: 44px;
+  min-width: 44px;
+  border-radius: 50%;
+  background-color: rgb(255, 255, 255);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  position: relative;
+  top: -50px;
+  left: 70px;
   cursor: pointer;
+  .user-profile-picture-input-label {
+    border-radius: 50%;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    padding: 8px;
+    box-shadow: rgba(0, 0, 0, 8%) 0px 0px 4px, rgba(0, 0, 0, 16%) 0px 4px 12px;
+  }
+}
+
+.user-profile-picture-input-container:hover {
+  filter: brightness(80%);
 }
 
 .user-profile-main-icons {
   display: flex;
   justify-content: flex-end;
   position: relative;
-  left: -300px;   // need to change left based on media query
-  .user-profile-edit-icon, 
-  .user-profile-share-icon, 
-  .user-profile-portfolio-icon, 
-  .user-profile-more-icon-container {
-    margin-right: 20px;
+  left: -300px;
+  .user-profile-edit-icon-container {
+    border-radius: 50%;
+    max-height: 30px;
+    max-width: 30px;
+    position: relative;
+    left: -10px;
   }
-  .user-profile-edit-icon:hover {
-    cursor: pointer;
+
+  .user-profile-edit-icon-container:hover {
     outline: none;
     opacity: 1;
     background-color: rgba(34, 34, 34, 0.1);
     text-decoration: none;
   }
-  .user-profile-share-icon:hover, 
-  .user-profile-portfolio-icon:hover, 
-  .user-profile-more-icon-container:hover {
-    cursor: not-allowed;
-  }
+}
+
+.user-profile-edit-icon, 
+.user-profile-share-icon, 
+.user-profile-portfolio-icon, 
+.user-profile-more-icon {
+  margin-right: 20px;
+}
+.user-profile-edit-icon:hover {
+  cursor: pointer;
+}
+.user-profile-share-icon:hover, 
+.user-profile-portfolio-icon:hover, 
+.user-profile-more-icon:hover {
+  cursor: not-allowed;
 }
 
 // .user-profile-username {
