squashed a bug in user show

--- a/app/assets/stylesheets/components/images/image_show.scss
+++ b/app/assets/stylesheets/components/images/image_show.scss
@@ -79,7 +79,7 @@
     letter-spacing: 0px;
     text-transform: none;
     color: rgb(34, 34, 34);
-    font-family: "Helvetica Neue", HelveticaNeue, Helvetica, FreeSans, Arial, sansserif;
+    font-family: Helvetica;
     word-break: break-word;
   }
 }
@@ -100,7 +100,7 @@
   word-break: break-word;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-family: "Helvetica Neue", HelveticaNeue, Helvetica, FreeSans, Arial, sansserif;
+  font-family: Helvetica;
 }
 
 .image-show-uploaded-date-info-text,
@@ -110,7 +110,7 @@
   letter-spacing: 0px;
   text-transform: none;
   color: rgb(34, 34, 34);
-  font-family: "Helvetica Neue", HelveticaNeue, Helvetica, FreeSans, Arial, sansserif;
+  font-family: Helvetica;
   margin-right: 10px;
 }
 
