--- a/app/assets/stylesheets/components/users/user_show.scss
+++ b/app/assets/stylesheets/components/users/user_show.scss
@@ -244,7 +244,7 @@
     line-height: 0px;
     text-transform: none;
     color: rgb(34, 34, 34);
-    font-family: "Helvetica Neue", HelveticaNeue, Helvetica, FreeSans, Arial sans-serif;
+    font-family: Helvetica;
     word-break: break-word;
   }
   .user-profile-impressions-info {
