--- a/app/assets/stylesheets/components/users/user_update.scss
+++ b/app/assets/stylesheets/components/users/user_update.scss
@@ -27,7 +27,7 @@
     text-transform: none;
     color: rgb(34, 34, 34);
     font-weight: bold;
-    font-family: "Helvetica Neue", HelveticaNeue, Helvetica, FreeSans, Arial, sans-serif;
+    font-family: Helvetica;
   }
 }
 
