--- a/app/assets/stylesheets/components/images/image_show.scss
+++ b/app/assets/stylesheets/components/images/image_show.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 
 .image-show-container {
-  padding-bottom: 100px;
+  padding-bottom: 30px;
 }
 
 .image-container {
@@ -38,7 +38,7 @@
 .image-info-container {
   width: 933px;
   min-width: auto;
-  height: auto;
+  height: 500px;
   margin-right: 10px;
 }
 
