starting major edit of user show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,7 @@
 @import "./components/images/image_update_form.scss";
 @import "./components/users/user_show.scss";
 @import "./components//users/user_update.scss";
+@import "./components/footer.scss";
 
 html {
   box-sizing: border-box;
