--- a/app/assets/stylesheets/components/images/image_index.scss
+++ b/app/assets/stylesheets/components/images/image_index.scss
@@ -1,8 +1,7 @@
 @import "../../variables.scss";
 
 .images-gallery-container {
-  margin: 0px 50px;
-  margin-top: 20px;
+  margin: 20px 50px 50px;
   line-height: 0;
   -webkit-column-count: 4;
   -webkit-column-gap: 10px;
