--- a/app/assets/stylesheets/components/users/user_show.scss
+++ b/app/assets/stylesheets/components/users/user_show.scss
@@ -215,6 +215,7 @@
   justify-content: center;
   column-gap: 10px;
   row-gap: 10px;
+  margin-bottom: 260px;
   
   .user-show-image-container {
     width: 100%;
