finished user profile mvp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
       window.googlePlayIcon = '<%= image_url('get_google_play.png') %>';
       window.uploadIcon = '<%= image_url('upload_icon.png') %>';
       window.infoIcon = '<%= image_url('info_icon.png') %>';
+      window.arrowLeftIcon = '<%= image_url('arrow-pointing-left.png') %>';
     </script>
   </head>
 
