comments show and form works now need to style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
 @import "./components/users/user_show.scss";
 @import "./components//users/user_update.scss";
 @import "./components/footer.scss";
+@import "./components/comments/comments_form.scss";
 
 html {
   box-sizing: border-box;
