--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -1,5 +1,3 @@
-@import "../variables.scss";
-
 .home-page {
   height: 100vh;
   font-size: 2rem;
@@ -7,15 +5,15 @@
 
 .home-wrapper {
   margin-top: 80px;
-  background-color: $white;
+  background-color: #ffffff;
   padding: 5px 0 20px 0;
 }
 
 .home-title {
-  color: $veryDarkGrey;
+  color: #222222;
   font-size: 3.6rem;
   line-height: 40px;
-  font-weight: $boldFontWeight;
+  font-weight: bold;
   box-sizing: border-box;
   margin-left: 50px;
   padding: 16px 0 0;
