--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -1,5 +1,3 @@
-@import "../variables.scss";
-
 .session_form, .upload-image-form {
   height: 95%;
   width: 100%;
@@ -15,8 +13,8 @@
 
 form {
   width: 338px;
-  background-color: $white;
-  border: 1px solid $lighterGrey;
+  background-color: #ffffff;
+  border: 1px solid #f7f8fa;
   padding: 30px;
   display: flex;
   flex-direction: column;
@@ -31,21 +29,21 @@ form {
 }
 
 .form-statement > a {
-  color: $primaryBlue;
+  color: #0870d1;
   font-weight: 400;
 }
 
 .auth-header {
   font-size: 24px;
-  color: $veryDarkGrey;
-  font-weight: $mediumFontWeight;
+  color: #222222;
+  font-weight: 400;
   text-align: center;
   margin-bottom: 25px;
   width: 100%;
 }
 
 p {
-  color: $mediumGrey;
+  color: #6d7378;
   font-size: 16px;
   margin-bottom: 15px;
 }
@@ -61,14 +59,14 @@ p > a {
 .auth-label {
   width: 90%;
   font-size: 14px;
-  color: $mediumGrey;
+  color: #6d7378;
 }
 
 .auth-description {
   font-size: 16px;
   line-height: 20px;
   text-align: center;
-  color: $veryDarkGrey;
+  color: #222222;
   margin-bottom: 25px;
 }
 
@@ -76,7 +74,7 @@ p > a {
   width: 100%;
   margin-top: 10px;
   border-radius: 4px;
-  border: 1px solid $grey;
+  border: 1px solid #d7d8db;
   padding: 12px 16px;
   font-size: 16px;
   margin-bottom: 15px;
@@ -88,8 +86,8 @@ label input[type=text] {
 
 input[type=submit] {
   font-size: 16px;
-  background-color: $primaryBlue;
-  color: $white;
+  background-color: #0870d1;
+  color: #ffffff;
   border: none;
   cursor: pointer;
   outline: none;
