changed some css around

--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -77,7 +77,6 @@
   font-size: 36px;
   line-height: 40px;
   font-weight: bold;
-  text-transform: none;
   color: rgb(34, 34, 34);
   position: relative;
   z-index: 2;
@@ -109,7 +108,6 @@
   font-size: 24px;
   line-height: 28px;
   font-weight: bold;
-  text-transform: none;
   color: rgb(34, 34, 34);
   margin-bottom: 20px;
 }
@@ -118,7 +116,6 @@
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0px;
-  text-transform: none;
   color: rgb(34, 34, 34);
   font-weight: 340;
 }
@@ -136,7 +133,7 @@
 }
 
 .splash-about {
-  margin-bottom: 50px;
+  padding-bottom: 100px;
 }
 
 .splash-app {
@@ -162,7 +159,6 @@
   font-size: 36px;
   line-height: 40px;
   font-weight: bold;
-  text-transform: none;
   color: rgb(34, 34, 34);
   margin-bottom: 10px;
 }
@@ -171,7 +167,6 @@
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0px;
-  text-transform: none;
   margin-bottom: 20px;
   color: rgb(34, 34, 34);
   max-width: 470px;
