--- a/app/assets/stylesheets/components/developer_message.scss
+++ b/app/assets/stylesheets/components/developer_message.scss
@@ -3,6 +3,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Helvetica;
+  margin-bottom: -150px;
+  .message-section {
+    position: relative;
+    top: -208px;
+  }
 
   .message-section .leaf-set div:nth-child(1) {
     left: 8%;
@@ -95,29 +100,13 @@
   flex-direction: column;
 }
 
-.message-board-header {
-  color: #ffffff;
-  font-size: 40px;
-  font-weight: bold;
-  margin-bottom: 70px;
-}
-
-.message-board-paragraph {
-  color: #ffffff;
-  font-size: 20px;
-  a {
-    text-decoration: none;
-    color: inherit;
-    font-size: inherit;
-  }
-}
-
 .message-section .leaf-set {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 
 .message-section .leaf-set div {
@@ -153,19 +142,19 @@
 }
 
 .leaf-1 {
-  fill: rgb(230, 88, 88);
+  fill: rgb(199, 73, 73);
 }
 
 .leaf-2 {
-  fill: rgb(234, 193, 116);
+  fill: rgb(255, 201, 101);
 }
 
 .leaf-3 {
-  fill: rgb(250, 250, 156);
+  fill: rgb(228, 228, 105);
 }
 
 .leaf-4 {
-  fill: rgb(232, 98, 98);
+  fill: rgb(200, 76, 76);
 }
 
 .leaf-5 {
@@ -174,4 +163,83 @@
 
 .leaf-6 {
   fill: #841014
+}
+
+.message-info-container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  z-index: 10;
+}
+
+.message-info-inner {
+  text-align: center;
+  width: 700px;
+  height: 150px;
+}
+
+.message-info-header {
+  h2 {
+    font-size: 40px;
+    font-family: Helvetica;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    margin-bottom: 20px;
+  }
+}
+
+.message-info-para {
+  p {
+    font-size: 20px;
+    font-family: Helvetica;
+    color: rgb(255, 255, 255);
+    a {
+      color: inherit;
+    }
+    a:hover {
+      color: rgb(8, 112, 209);
+    }
+  }
+}
+
+.links-container {
+  display: flex;
+  justify-content: center;
+}
+
+.links {
+  border: 5px solid salmon;
+  width: 300px;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+  top: 270px;
+  z-index: 10;
+}
+
+.button-links {
+  max-width: 80px;
+  width: 100%;
+  max-height: 40px;
+  height: 100%;
+  border: none;
+  border-radius: 10%;
+  background-color: #ffdde1;
+  a {
+    text-decoration: none;
+    color: rgb(34, 34, 34);
+    font-family: Helvetica;
+  }
+
+  a:hover {
+    color: rgb(34, 34, 34);
+  }
+}
+
+.button-links:hover {
+  background-color: #ee9ca7;
+  transform: scale(1.1);
+  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.4);
 }
